--- a/app/src/main/res/layout/fragment_schedule_view.xml
+++ b/app/src/main/res/layout/fragment_schedule_view.xml
@@ -77,7 +77,7 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="200dip"
+                android:layout_height="220dip"
                 android:orientation="vertical">
 
                 <fragment
@@ -368,25 +368,23 @@
                 android:gravity="center_horizontal"
                 android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/negative_button"
+                <Button
+                    android:id="@+id/call_client"
                     android:layout_width="120dp"
                     android:layout_height="40dp"
                     android:background="@drawable/curve_blue_background"
-                    android:gravity="center"
-                    android:padding="10dp"
+                    android:gravity="center_vertical|center_horizontal"
                     android:text="Call Client"
                     android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                     android:textColor="@color/white" />
 
-                <TextView
+                <Button
                     android:id="@+id/positive_button"
                     android:layout_width="120dp"
                     android:layout_height="40dp"
                     android:layout_marginLeft="20dp"
-                    android:padding="10dp"
                     android:background="@drawable/curve_white_background"
-                    android:gravity="center"
+                    android:gravity="center_horizontal|center_vertical"
                     android:text="More"
                     android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                     android:textColor="@color/schedule_title_bg_color" />
